Adding wiki link to read mmore

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
           <br />
           <br />
-          <u>Read more</u>
+          <u><a href="https://en.wikipedia.org/wiki/Beagle">Read more</a></u>
         </p>
       </div>
 
